# Nomaly-Target-Explorer

./: .dockerignore  .env.example  .gitignore  CLAUDE.md  README-data.md  README.md  Readme.md  TODO.md  api.py  app.py  auth.py  config.py  db.py  docker-entrypoint.sh  errors.py  hash_password.py  logging_config.py  main.py  pyproject.toml  pytest.ini  requirements.txt  schema.sql  services.py  utils.py  wsgi.py
.github/workflows/: tests.yml
aidocs/: pio.doc  pio6.doc  px.doc  px6.doc
blueprints/: admin.py  disease_sets.py  gwas.py  main.py  network_analysis.py  nomaly.py  nomaly_services.py  page1.py  phecode.py  phecode_term.py  phecode_term_helper.py  phewas.py  prioritisation_by_nomaly_scores.py  prioritisation_by_nomaly_scores_refactored.py  search.py  test_plot.py  user.py  variant.py
data_services/: TODO.md  __init__.py  genotype.py  icd10.py  nomaly_data.py  nomaly_score.py  phenotype.py  registry.py  stats.py  utils.py
data_services/interfaces/: phenotype.py
outsee5/: prioritisation_by_nomaly_scores.py
scripts/: dump_genotype_counts_from_hdf.py  run_phewas.py
static/css/: style.css
templates/: base.html  data_base.html  error.html  index.html  login.html  network_analysis.html  page1.html  phecode.html  phecode2.html  phecode_term.html  search.html  test_plot.html  variant.html  variant_scores.html
templates/admin/: users.html
tests/: README.md  conftest.py  data_utils.py  test_config.py  test_genotype_hdf5.py  test_genotype_hdf5_integration.py  test_nomaly.py  test_nomaly_score_hdf5_integration.py  test_phecode_routes.py  test_phenotype_hdf5.py  test_phenotype_hdf5_integration.py  test_plots.py  test_prioritisation.py  test_stats_data_integration.py  test_stats_hdf5_integration.py  test_tests.py
(+31 files in other folders)
